...
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_background"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/steps_recycler"
                app:layout_constraintStart_toStartOf="@+id/steps_recycler"
                tools:text="Brownies Ingredient" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/steps_recycler"
                android:layout_width="0dp"
...
